<resources>
    <string name="app_name">Early Bird</string>
    <string name="tab_text_1">Calendar</string>
    <string name="tab_text_2">Goals</string>
    <string name="tab_text_3">Account</string>
    <string name="hint">Enter Event Description</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="PasswordInput">Please input Password</string>
    <string name="UsernameInput">Please input Username</string>

    <string name="Username">Username:</string>
    <string name="UsernameHint">input Desired Username</string>
    <string name="Email">E-mail:</string>
    <string name="EmailHint">input your Email</string>
    <string name="Password">Password:</string>
    <string name="PasswordHint">input Desired Password</string>
    <string name="Gender">Gender:</string>
    <string name="GenderHint">input your Gender</string>
    <string name="FirstName">First Name:</string>
    <string name="FirstNameHint">input your First Name</string>
    <string name="LastName">Last Name:</string>
    <string name="LastNameHint">input your Last Name</string>
</resources>
