<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/icon"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_marginTop="150dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_below="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textSize="17sp"
                android:text="@string/Username"/>
            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textColor="#fff"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:textColorHint="#e9e9e9"
                android:hint="@string/UsernameInput"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textSize="17sp"
                android:text="@string/Password"/>
            <EditText
                android:inputType="textPassword"
                android:id="@+id/userPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textColor="#fff"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:textColorHint="#e9e9e9"
                android:hint="@string/PasswordInput"
                />
        </LinearLayout>
        <Button
            android:id="@+id/login"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:textColor="@color/colorPrimary"
            android:background="#fff"/>
        <TextView
            android:id="@+id/register"
            android:layout_gravity="center_horizontal"
            android:textColor="#fff"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register"/>
    </LinearLayout>
</RelativeLayout>